# cfs-hal

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md
src/it/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt
src/main/cpp/cfs/hal/: ByteStram.cpp  ByteStram.hpp  CharacterDevice.cpp  CharacterDevice.hpp  DeviceManager.cpp  DeviceManager.hpp  FileDescriptor.cpp  FileDescriptor.hpp  GPIO.cpp  GPIO.hpp  I2c.cpp  I2c.hpp  I2s.cpp  I2s.hpp  ImplCheck.cpp  ImplCheck.hpp  NonCopyable.cpp  NonCopyable.hpp  PeripheralRefCounter.cpp  PeripheralRefCounter.hpp  Spi.cpp  Spi.hpp  SysFsGPIO.cpp  SysFsGPIO.hpp  Uart.cpp  Uart.hpp  main.cpp
src/main/cpp/cfs/hal/devices/: DeviceDriver.hpp  Hmc5883l.cpp  Hmc5883l.hpp  UbloxNeoM8NGps.cpp  UbloxNeoM8NGps.hpp
src/main/cpp/cfs/hal/devices/drivers/: UbloxNeoM8NGps.cpp  UbloxNeoM8NGps.hpp
src/main/cpp/cfs/hal/devices/drivers/magnetometer/: Hmc5883l.hpp
src/main/cpp/cfs/hal/network/: Socket.cpp  Socket.hpp
src/main/cpp/cfs/hal/network/i2c/: I2c.cpp  I2c.hpp
src/main/cpp/cfs/hal/network/i2s/: I2s.hpp
src/main/cpp/cfs/hal/network/rpi/: RpiUart.cpp  RpiUart.hpp
src/main/cpp/cfs/hal/network/serial/: Uart.cpp  Uart.hpp
src/main/cpp/cfs/hal/private/: UartPrivate.hpp
src/main/cpp/cfs/hal/rpi/: RpiUart.cpp  RpiUart.hpp
src/test/cpp/: CMakeLists.txt
src/test/cpp/cfs/hal/: FileDescriptorTest.cpp  FileDescriptorTest.hpp
